Added custom method updateTaskStatusById and javadoc for it. Refactored deleteTaskById method.